font size changes and alignment of jar fix

--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -185,6 +185,7 @@
       display: flex;
       align-items: center;
       color: $statsColor;
+      // padding-left: 28px;
 
       h2 {
         color: $statsTitleColor;
@@ -230,7 +231,7 @@
         font-size: 40px;
 
         @media screen and (max-width: 1600px) {
-          font-size: 34px;
+          font-size: 40px;
         }
       }
 
@@ -239,8 +240,9 @@
         height: 146px;
         display: flex;
         flex-direction: column;
-        align-items: center;
+        align-items: start;
         justify-content: center;
+        padding-left: 28px;
       }
     }
 
